[tool.poetry]
name = "fastapi-test"
version = "0.1.0"
description = "FastApi test project"
authors = ["InomjonQurbonov <inomjonqurbonov916@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
